--- a/.gitignore
+++ b/.gitignore
@@ -51,12 +51,14 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+#unnecesarry directories
+.vscode/
+roms/
 # Test Roms and Binary
 flag_test.ch8
 ibm_test.ch8
 keypad_test.ch8
 logo_test.ch8
+flake
 opcode_test.ch8
 timer_test.ch8
-flake
-roms/*
